--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,7 +41,7 @@
   color: #888;
 } */
 body {
-  background-image: url('./assets/valley.jpeg');
+  /* background-image: url('./assets/valley.jpeg'); */
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
